--- a/FRONTEND/Hackathon-frontend/src/styles/App.css
+++ b/FRONTEND/Hackathon-frontend/src/styles/App.css
@@ -5,7 +5,28 @@
   text-align: center;
 }
 
-.logo {
+.document {
+  background-color: rgb(246, 243, 209);
+  margin: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.document-buttons {
+  flex-direction: row;
+}
+
+textarea {
+  border-radius: 0.5rem;
+}
+
+input {
+  border-radius: 0.2rem;
+  border-width: 0;
+}
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -40,3 +61,5 @@
 .read-the-docs {
   color: #888;
 }
+
+*/
