Style: Position notes and what is inside them using grid and flex

--- a/FRONTEND/Hackathon-frontend/src/styles/App.css
+++ b/FRONTEND/Hackathon-frontend/src/styles/App.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+.all-documents {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* Display 3 items per row */
+  gap: 1rem;
+}
 .document {
   background-color: rgb(246, 243, 209);
   margin: 1rem;
