--- a/FRONTEND/Hackathon-frontend/src/styles/index.css
+++ b/FRONTEND/Hackathon-frontend/src/styles/index.css
@@ -12,6 +12,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+--backgroundColor: #e4e2c7;
+}
+
+body {
+  background-color: var(--backgroundColor);
 }
 
 a {
