--- a/FRONTEND/Hackathon-frontend/src/styles/index.css
+++ b/FRONTEND/Hackathon-frontend/src/styles/index.css
@@ -12,7 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
---backgroundColor: #e4e2c7;
+--backgroundColor: #74E7DB;
 }
 
 body {
@@ -44,8 +44,9 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.3em 1em;
+    /* padding: 0.6em 1.2em;  */
+    font-size: 0.9em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
