--- a/FRONTEND/Hackathon-frontend/src/styles/App.css
+++ b/FRONTEND/Hackathon-frontend/src/styles/App.css
@@ -7,6 +7,19 @@
     --backgroundColor: #e4e2c7;
 }
 
+nav {
+  display: flex;
+  justify-content: start;
+  font-weight: 100;
+}
+
+.amount {
+  font-weight: 200;
+}
+
+/* .create {
+  border-bottom: 1px solid #22AAA1;
+} */
 
 .creation-of-document {
   display: flex;
@@ -27,6 +40,9 @@
   border: 2px solid #333;
 }
 
+.document:hover {
+  box-shadow: 0 0.5rem 1rem 0 #0003;
+}
 .document-buttons {
   flex-direction: row;
   justify-content: space-between;
@@ -34,12 +50,16 @@
 
 textarea {
   border-radius: 0.5rem;
+  margin: 0.4rem;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    padding: 0.5rem;
 }
 
 input {
   border-radius: 0.2rem;
   border-width: 0;
   background-color: var(--color);
+  margin: 0.4rem;
 }
 
 .title {
@@ -50,6 +70,32 @@ input {
   margin-bottom: 0.5rem;
 }
 
+@media only screen and (max-width: 600px) {
+  .all-documents {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  .all-documents {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 963px) {
+  .all-documents {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+
+/* .tag-container {
+  display: flex;
+}
+
+.tag-container__hashtag {
+  margin: 0.4rem 0.4rem 0 0.4rem;
+} */
 /* .all-documents>.document {
   grid-row: span 1;
 }
