--- a/FRONTEND/Hackathon-frontend/src/styles/index.css
+++ b/FRONTEND/Hackathon-frontend/src/styles/index.css
@@ -21,11 +21,11 @@ body {
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #74E7DB;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #74E7DB;
 }
 
 body {
@@ -52,9 +52,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 0.4rem;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #22AAA1;
 }
 button:focus,
 button:focus-visible {
@@ -68,7 +69,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #74E7DB;
   }
   button {
     background-color: #f9f9f9;
